--- a/index.html
+++ b/index.html
@@ -39,6 +39,46 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
+        <header class="header fixed-header">
+            <div class="container">
+                <div class="header__inner">
+                    <!-- Logo -->
+                    <a href="#!">
+                        <div class="logo">
+                            <img src="./assets/img/logo.svg" alt="Lucy" class="logo">
+                        </div>
+                    </a>
+
+                   
+                        <!-- Navbar -->
+                        <nav class="navbar">
+                            <ul class="navbar__list">
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link navbar__link--active">Home</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href=#!"" class="navbar__link">About</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">Services & Rates</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">Reviews</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">Contacts us</a>
+                                </li>
+                            </ul>
+                        </nav>
+
+                        <!-- Action -->
+                        <div class="header-action">
+                            <a href="#!" class="header-action__link">Sign in</a>
+                            <a href="#!" class="btn header-action__btn">Sign up</a>
+                        </div>
+                </div>
+            </div>
+        </header>
 
     </body>
 </html>
