Làm phần Hero Media

--- a/index.html
+++ b/index.html
@@ -80,5 +80,55 @@
             </div>
         </header>
 
+        <section class="hero">
+            <div class="container">
+                <div class="hero__inner">
+                <!-- Hero media -->
+                    <div class="hero__media">
+                        <div class="hero__img-wrap">
+                            <img src="./assets/img/hero-img-01.png" alt="" class="hero__img">
+
+                            <!-- Decorators -->
+                            <img src="./assets/img/decor-02.svg" alt="" class="hero__decor hero__decor-left">
+                            <img src="./assets/img/decor-01.svg" alt="" class="hero__decor hero__decor-right">
+                        </div>
+                        <div class="hero__img-wrap hero__img-wrap-small">
+                            <img src="./assets/img/hero-img-02.png" alt="" class="hero__img">
+                        </div>
+
+                        <div class="hero__list">
+                            <!-- Hero list item 1 -->
+                            <div class="hero-list-item">
+                                
+                                    <img src="./assets/img/hero-img-03.png" alt="" class="hero-list-item__thumb">
+                                <div class="hero-list-item__infor">
+                                    <p class="hero-list-item__title">Pet Health</p>
+                                    <div class="hero-list-item__skeleton"></div>
+                                    <div class="hero-list-item__skeleton"></div>
+                                </div>
+                            </div>
+
+                            <span class="hero-list-item__separate"></span>
+
+                            <!-- Hero list item 2 -->
+                            <div class="hero-list-item">
+                                    <img src="./assets/img/hero-img-04.png" alt="" class="hero-list-item__thumb">
+                                <div class="hero-list-item__infor">
+                                    <p class="hero-list-item__title">Pet care</p>
+                                    <div class="hero-list-item__skeleton"></div>
+                                    <div class="hero-list-item__skeleton"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Hero content -->
+                    <section class="hero__content">
+
+                    </section>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
