--- a/index.html
+++ b/index.html
@@ -124,7 +124,23 @@
 
                     <!-- Hero content -->
                     <section class="hero__content">
-
+                        <h1 class="hero__heading">
+                            Established & Trusted Pet Care Service
+                        </h1>
+                        <p class="hero__desc">
+                            Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="btn btn--primary hero__header-btn">
+                                Book a Meet
+                                <span class="btn__icon">
+                                    <svg  width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M3.48584 1.5L5.98584 4L3.48584 6.5" stroke="#FD5056" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>                                        
+                                </span>
+                            </a>
+                            <p class="hero__cta-link">Schedule a Call</p>
+                        </div>
                     </section>
                 </div>
             </div>
