--- a/index.html
+++ b/index.html
@@ -13,27 +13,71 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Sora:wght@600;700;800&display=swap"
-            rel="stylesheet"
-        />
+            rel="stylesheet" />
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
-        <link rel="manifest" href="./assets/favicon/manifest.json">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
+        <link
+            rel="apple-touch-icon"
+            sizes="57x57"
+            href="./assets/favicon/apple-icon-57x57.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="60x60"
+            href="./assets/favicon/apple-icon-60x60.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="72x72"
+            href="./assets/favicon/apple-icon-72x72.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="./assets/favicon/apple-icon-76x76.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="114x114"
+            href="./assets/favicon/apple-icon-114x114.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="120x120"
+            href="./assets/favicon/apple-icon-120x120.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="144x144"
+            href="./assets/favicon/apple-icon-144x144.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="./assets/favicon/apple-icon-152x152.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./assets/favicon/apple-icon-180x180.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="192x192"
+            href="./assets/favicon/android-icon-192x192.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/favicon/favicon-32x32.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="./assets/favicon/favicon-96x96.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./assets/favicon/favicon-16x16.png" />
+        <link rel="manifest" href="./assets/favicon/manifest.json" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta
+            name="msapplication-TileImage"
+            content="./assets/favicon/ms-icon-144x144.png" />
+        <meta name="theme-color" content="#ffffff" />
 
         <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -45,64 +89,91 @@
                     <!-- Logo -->
                     <a href="#!">
                         <div class="logo">
-                            <img src="./assets/img/logo.svg" alt="Lucy" class="logo">
+                            <img
+                                src="./assets/img/logo.svg"
+                                alt="Lucy"
+                                class="logo" />
                         </div>
                     </a>
 
-                   
-                        <!-- Navbar -->
-                        <nav class="navbar">
-                            <ul class="navbar__list">
-                                <li class="navbar__item">
-                                    <a href="#!" class="navbar__link navbar__link--active">Home</a>
-                                </li>
-                                <li class="navbar__item">
-                                    <a href=#!"" class="navbar__link">About</a>
-                                </li>
-                                <li class="navbar__item">
-                                    <a href="#!" class="navbar__link">Services & Rates</a>
-                                </li>
-                                <li class="navbar__item">
-                                    <a href="#!" class="navbar__link">Reviews</a>
-                                </li>
-                                <li class="navbar__item">
-                                    <a href="#!" class="navbar__link">Contacts us</a>
-                                </li>
-                            </ul>
-                        </nav>
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__item">
+                                <a
+                                    href="#!"
+                                    class="navbar__link navbar__link--active"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">About</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link"
+                                    >Services & Rates</a
+                                >
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Reviews</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link"
+                                    >Contacts us</a
+                                >
+                            </li>
+                        </ul>
+                    </nav>
 
-                        <!-- Action -->
-                        <div class="header-action">
-                            <a href="#!" class="header-action__link">Sign in</a>
-                            <a href="#!" class="btn header-action__btn">Sign up</a>
-                        </div>
+                    <!-- Action -->
+                    <div class="header-action">
+                        <a href="#!" class="header-action__link">Sign in</a>
+                        <a href="#!" class="btn header-action__btn">Sign up</a>
+                    </div>
                 </div>
             </div>
         </header>
 
+        <!-- Hero -->
         <section class="hero">
             <div class="container">
                 <div class="hero__inner">
-                <!-- Hero media -->
+                    <!-- Hero media -->
                     <div class="hero__media">
                         <div class="hero__img-wrap">
-                            <img src="./assets/img/hero-img-01.png" alt="" class="hero__img">
+                            <img
+                                src="./assets/img/hero-img-01.png"
+                                alt=""
+                                class="hero__img" />
 
                             <!-- Decorators -->
-                            <img src="./assets/img/decor-02.svg" alt="" class="hero__decor hero__decor-left">
-                            <img src="./assets/img/decor-01.svg" alt="" class="hero__decor hero__decor-right">
+                            <img
+                                src="./assets/img/decor-02.svg"
+                                alt=""
+                                class="hero__decor hero__decor-left" />
+                            <img
+                                src="./assets/img/decor-01.svg"
+                                alt=""
+                                class="hero__decor hero__decor-right" />
                         </div>
                         <div class="hero__img-wrap hero__img-wrap-small">
-                            <img src="./assets/img/hero-img-02.png" alt="" class="hero__img">
+                            <img
+                                src="./assets/img/hero-img-02.png"
+                                alt=""
+                                class="hero__img" />
                         </div>
 
                         <div class="hero__list">
                             <!-- Hero list item 1 -->
                             <div class="hero-list-item">
-                                
-                                    <img src="./assets/img/hero-img-03.png" alt="" class="hero-list-item__thumb">
+                                <img
+                                    src="./assets/img/hero-img-03.png"
+                                    alt=""
+                                    class="hero-list-item__thumb" />
                                 <div class="hero-list-item__infor">
-                                    <p class="hero-list-item__title">Pet Health</p>
+                                    <p class="hero-list-item__title">
+                                        Pet Health
+                                    </p>
                                     <div class="hero-list-item__skeleton"></div>
                                     <div class="hero-list-item__skeleton"></div>
                                 </div>
@@ -112,9 +183,14 @@
 
                             <!-- Hero list item 2 -->
                             <div class="hero-list-item">
-                                    <img src="./assets/img/hero-img-04.png" alt="" class="hero-list-item__thumb">
+                                <img
+                                    src="./assets/img/hero-img-04.png"
+                                    alt=""
+                                    class="hero-list-item__thumb" />
                                 <div class="hero-list-item__infor">
-                                    <p class="hero-list-item__title">Pet care</p>
+                                    <p class="hero-list-item__title">
+                                        Pet care
+                                    </p>
                                     <div class="hero-list-item__skeleton"></div>
                                     <div class="hero-list-item__skeleton"></div>
                                 </div>
@@ -128,15 +204,28 @@
                             Established & Trusted Pet Care Service
                         </h1>
                         <p class="hero__desc">
-                            Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.
+                            Discover a wide variety of Pawsitive services to
+                            choose from, including daycare, private walks,
+                            office duty and spa.
                         </p>
                         <div class="hero__row">
-                            <a href="#!" class="btn btn--primary hero__header-btn">
+                            <a
+                                href="#!"
+                                class="btn btn--primary hero__header-btn">
                                 Book a Meet
                                 <span class="btn__icon">
-                                    <svg  width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M3.48584 1.5L5.98584 4L3.48584 6.5" stroke="#FD5056" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>                                        
+                                    <svg
+                                        width="9"
+                                        height="8"
+                                        viewBox="0 0 9 8"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M3.48584 1.5L5.98584 4L3.48584 6.5"
+                                            stroke="#FD5056"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
                                 </span>
                             </a>
                             <p class="hero__cta-link">Schedule a Call</p>
@@ -146,5 +235,41 @@
             </div>
         </section>
 
+        <main style="height: 8000px;">
+            <!-- About -->
+            <section class="about">
+                <div class="container">
+                    <div class="about__inner">
+                        <!-- About content -->
+                        <section class="about__content">
+                            <p class="about__label">// About //</p>
+                            <h2 class="about__heading section-heading ">
+                                Best Agency For Your Pet.
+                            </h2>
+                            <p class="about__desc section-desc">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <div class="about__checklist">
+                                <span class="about__check-item">Certified Groomer</span>
+                                <span class="about__check-item">Animal Lover</span>
+                                <span class="about__check-item">14+ Years Experience</span>
+                                <span class="about__check-item">Pet Parent Of 3 Dogs</span>
+                            </div>
+                        </section>
+
+                        <!-- About media -->
+                        <div class="about__media"></div>
+
+                        <!-- About media -->
+                        <div class="about__media"></div>
+
+                        <!-- About content -->
+                        <section class="about__content"></section>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
