Làm phần About part 2

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
         </section>
 
-        <main style="height: 8000px;">
+        <main style="height: 8000px">
             <!-- About -->
             <section class="about">
                 <div class="container">
@@ -243,7 +243,7 @@
                         <!-- About content -->
                         <section class="about__content">
                             <p class="about__label">// About //</p>
-                            <h2 class="about__heading section-heading ">
+                            <h2 class="about__heading section-heading">
                                 Best Agency For Your Pet.
                             </h2>
                             <p class="about__desc section-desc">
@@ -252,15 +252,46 @@
                                 incididunt ut labore et dolore magna aliqua.
                             </p>
                             <div class="about__checklist">
-                                <span class="about__check-item">Certified Groomer</span>
-                                <span class="about__check-item">Animal Lover</span>
-                                <span class="about__check-item">14+ Years Experience</span>
-                                <span class="about__check-item">Pet Parent Of 3 Dogs</span>
+                                <span class="about__check-item"
+                                    >Certified Groomer</span
+                                >
+                                <span class="about__check-item"
+                                    >Animal Lover</span
+                                >
+                                <span class="about__check-item"
+                                    >14+ Years Experience</span
+                                >
+                                <span class="about__check-item"
+                                    >Pet Parent Of 3 Dogs</span
+                                >
                             </div>
                         </section>
 
                         <!-- About media -->
-                        <div class="about__media"></div>
+                        <div class="about__media">
+                            <!-- About card -->
+                            <div class="about__card">
+                                <p class="about__card-title">20+</p>
+                                <p class="about__card-desc">Years Experience</p>
+                                <img
+                                    src="./assets/icons/about-decor-01.svg"
+                                    alt=""
+                                    class="about__card-decor" />
+                            </div>
+
+                            <!-- About image wrapper -->
+                            <figure class="about__img-wrap">
+                                <img
+                                    src="./assets/img/about-media-01.png"
+                                    alt=""
+                                    class="about__img" />
+                            </figure>
+
+                            <img
+                                src="./assets/icons/about-decor-02.svg"
+                                alt=""
+                                class="about__media-decor" />
+                        </div>
 
                         <!-- About media -->
                         <div class="about__media"></div>
