Làm phần About part 3

--- a/index.html
+++ b/index.html
@@ -294,7 +294,42 @@
                         </div>
 
                         <!-- About media -->
-                        <div class="about__media"></div>
+                        <div class="about__media">
+                            <figure class="about__img-wrap about__img-wrap-bottom">
+                                <img
+                                    src="./assets/img/about-media-02.png"
+                                    alt=""
+                                    class="about__img about__img-bottom" />
+
+                                    <!-- About media decor -->
+                            <div>
+                                <img
+                                    src="./assets/icons/about-decor-03.svg"
+                                    alt=""
+                                    class="about__decor-img" />
+                                <img
+                                    src="./assets/icons/about-decor-04.svg"
+                                    alt=""
+                                    class="about__decor-img" />
+                                <img
+                                    src="./assets/icons/about-decor-05.svg"
+                                    alt=""
+                                    class="about__decor-img" />
+                                <img
+                                    src="./assets/icons/about-decor-06.svg"
+                                    alt=""
+                                    class="about__decor-img" />
+                                <img
+                                    src="./assets/icons/about-decor-07.svg"
+                                    alt=""
+                                    class="about__decor-img" />
+                                <img
+                                    src="./assets/icons/about-decor-08.svg"
+                                    alt=""
+                                    class="about__decor-img" />
+                            </div>
+                            </figure>
+                        </div>
 
                         <!-- About content -->
                         <section class="about__content"></section>
