Làm phần About part 4

--- a/index.html
+++ b/index.html
@@ -295,47 +295,128 @@
 
                         <!-- About media -->
                         <div class="about__media">
-                            <figure class="about__img-wrap about__img-wrap-bottom">
+                            <figure
+                                class="about__img-wrap about__img-wrap-bottom">
                                 <img
                                     src="./assets/img/about-media-02.png"
                                     alt=""
                                     class="about__img about__img-bottom" />
 
-                                    <!-- About media decor -->
-                            <div>
-                                <img
-                                    src="./assets/icons/about-decor-03.svg"
-                                    alt=""
-                                    class="about__decor-img" />
-                                <img
-                                    src="./assets/icons/about-decor-04.svg"
-                                    alt=""
-                                    class="about__decor-img" />
-                                <img
-                                    src="./assets/icons/about-decor-05.svg"
-                                    alt=""
-                                    class="about__decor-img" />
-                                <img
-                                    src="./assets/icons/about-decor-06.svg"
-                                    alt=""
-                                    class="about__decor-img" />
-                                <img
-                                    src="./assets/icons/about-decor-07.svg"
-                                    alt=""
-                                    class="about__decor-img" />
-                                <img
-                                    src="./assets/icons/about-decor-08.svg"
-                                    alt=""
-                                    class="about__decor-img" />
-                            </div>
+                                <!-- About media decor -->
+                                <div>
+                                    <img
+                                        src="./assets/icons/about-decor-03.svg"
+                                        alt=""
+                                        class="about__decor-img" />
+                                    <img
+                                        src="./assets/icons/about-decor-04.svg"
+                                        alt=""
+                                        class="about__decor-img" />
+                                    <img
+                                        src="./assets/icons/about-decor-05.svg"
+                                        alt=""
+                                        class="about__decor-img" />
+                                    <img
+                                        src="./assets/icons/about-decor-06.svg"
+                                        alt=""
+                                        class="about__decor-img" />
+                                    <img
+                                        src="./assets/icons/about-decor-07.svg"
+                                        alt=""
+                                        class="about__decor-img" />
+                                    <img
+                                        src="./assets/icons/about-decor-08.svg"
+                                        alt=""
+                                        class="about__decor-img" />
+                                </div>
                             </figure>
                         </div>
 
                         <!-- About content -->
-                        <section class="about__content"></section>
+                        <section class="about__content">
+                            <h2 class="about__heading-bottom section-heading">
+                                Taking A Vacation? So Is Your Pet.
+                            </h2>
+                            <p class="about__desc-bottom section-desc">
+                                We offer long-term and short-term boarding.
+                                Every dog has its own private, spacious room and
+                                daily individual time in our large play yard.
+                            </p>
+
+                            <div class="tab">
+                                <ul class="tab__list">
+                                    <li class="tab__item tab__item--active">
+                                        <img
+                                            src="./assets/icons/home.png"
+                                            alt=""
+                                            class="tab__icon--active tab__icon" />
+                                        <span class="tab__title"
+                                            >Pet Boarding</span
+                                        >
+                                    </li>
+                                    <li class="tab__item">
+                                        <img
+                                            src="./assets/icons/health.png"
+                                            alt=""
+                                            class="tab__icon" />
+                                        <span class="tab__title"
+                                            >Pet Daycare</span
+                                        >
+                                    </li>
+                                    <li class="tab__item">
+                                        <img
+                                            src="./assets/icons/bag.png"
+                                            alt=""
+                                            class="tab__icon" />
+                                        <span class="tab__title"
+                                            >Pet Transport</span
+                                        >
+                                    </li>
+                                </ul>
+                                <div class="tab__contents">
+                                    <!-- Tab content 1 -->
+                                    <div
+                                        class="tab__content-item tab__content-item--active">
+                                        <p class="tab__content-desc">
+                                            While you're on holiday, here's
+                                            where your furry friends will spend
+                                            their time 1.
+                                        </p>
+                                        <a href="#!" class="tab__content-more">
+                                            View more
+                                        </a>
+                                    </div>
+
+                                    <!-- Tab content 2 -->
+                                    <div class="tab__content-item">
+                                        <p class="tab__content-desc">
+                                            While you're on holiday, here's
+                                            where your furry friends will spend
+                                            their time 2.
+                                        </p>
+                                        <a href="#!" class="tab__content-more">
+                                            View more</a
+                                        >
+                                    </div>
+
+                                    <!-- Tab content 3 -->
+                                    <div class="tab__content-item">
+                                        <p class="tab__content-desc">
+                                            While you're on holiday, here's
+                                            where your furry friends will spend
+                                            their time 3.
+                                        </p>
+                                        <a href="#!" class="tab__content-more">
+                                            View more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </section>
+
         </main>
     </body>
 </html>
