--- a/index.html
+++ b/index.html
@@ -624,7 +624,8 @@
 
             <!-- Pricing -->
             <section class="pricing">
-                <div class="container">
+                <div class="container pricing__container">
+                    <!-- Pricing top -->
                     <h2 class="section-heading pricing__heading">
                         The Best Choice
                     </h2>
@@ -638,16 +639,103 @@
                         <div class="pricing__switch-inner">
                             <!-- Switch -->
                             <div class="pricing__switch">
-                                <input type="checkbox" name="" id="pricing-switch" class="pricing__switch-input" hidden checked>
-                                <label for="pricing-switch" class="pricing__switch-label">
-                                    <span class="pricing__switch-value">Monthly</span>
-                                    <span class="pricing__switch-value">Yearly</span>
+                                <input
+                                    type="checkbox"
+                                    name=""
+                                    id="pricing-switch"
+                                    class="pricing__switch-input"
+                                    hidden
+                                    checked />
+                                <label
+                                    for="pricing-switch"
+                                    class="pricing__switch-label">
+                                    <span class="pricing__switch-value">
+                                        Monthly
+                                    </span>
+                                    <span class="pricing__switch-value">
+                                        Yearly
+                                    </span>
                                 </label>
                             </div>
 
                             <!-- Sale off -->
-                            <img src="./assets/img/pricing-sale-off.svg" alt="" class="pricing__sale-off">
+                            <img
+                                src="./assets/img/pricing-sale-off.svg"
+                                alt=""
+                                class="pricing__sale-off" />
                         </div>
+                    </div>
+
+                    <!-- Pricing body -->
+                    <div class="pricing__list">
+                        <!-- Pricing item 1 -->
+                        <article class="pricing-item">
+                            <p class="pricing-item__type">Basic</p>
+                            <h3 class="pricing-item__heading">Day care</h3>
+                            <p class="pricing-item__price">$150</p>
+                            <button class="btn pricing-item__btn">
+                                Purchase Now
+                            </button>
+                            <ul class="pricing-item__list">
+                                <li class="pricing-item__item">Single room</li>
+                                <li class="pricing-item__item">
+                                    Socialist Exercise
+                                </li>
+                                <li class="pricing-item__item">Custom Meals</li>
+                                <li class="pricing-item__item">
+                                    Spa and Grooming
+                                </li>
+                                <li class="pricing-item__item">Excercise 2x</li>
+                                <li class="pricing-item__item">Custom Meals</li>
+                                <li class="pricing-item__item">Grooming 2x</li>
+                            </ul>
+                        </article>
+
+                        <!-- Pricing item 2 -->
+                        <article class="pricing-item">
+                            <p class="pricing-item__type">Exclusive</p>
+                            <h3 class="pricing-item__heading">2X Care</h3>
+                            <p class="pricing-item__price">$199</p>
+                            <button class="btn btn--primary pricing-item__btn">
+                                Purchase Now
+                            </button>
+                            <ul class="pricing-item__list">
+                                <li class="pricing-item__item">Single room</li>
+                                <li class="pricing-item__item">
+                                    Socialist Exercise
+                                </li>
+                                <li class="pricing-item__item">Custom Meals</li>
+                                <li class="pricing-item__item">
+                                    Spa and Grooming
+                                </li>
+                                <li class="pricing-item__item">Excercise 2x</li>
+                                <li class="pricing-item__item">Custom Meals</li>
+                                <li class="pricing-item__item">Grooming 2x</li>
+                            </ul>
+                        </article>
+
+                        <!-- Pricing item 3 -->
+                        <article class="pricing-item">
+                            <p class="pricing-item__type">Platinum</p>
+                            <h3 class="pricing-item__heading">4X Care</h3>
+                            <p class="pricing-item__price">$299</p>
+                            <button class="btn pricing-item__btn">
+                                Purchase Now
+                            </button>
+                            <ul class="pricing-item__list">
+                                <li class="pricing-item__item">Single room</li>
+                                <li class="pricing-item__item">
+                                    Socialist Exercise
+                                </li>
+                                <li class="pricing-item__item">Custom Meals</li>
+                                <li class="pricing-item__item">
+                                    Spa and Grooming
+                                </li>
+                                <li class="pricing-item__item">Excercise 2x</li>
+                                <li class="pricing-item__item">Custom Meals</li>
+                                <li class="pricing-item__item">Grooming 2x</li>
+                            </ul>
+                        </article>
                     </div>
                 </div>
             </section>
