--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer" style="height: 1000px;">
+        <footer class="footer">
             <div class="container">
                 <div class="footer__inner">
                     <!-- Footer left -->
@@ -1116,9 +1116,116 @@
                             </a>
                         </div>
                     </div>
-
+                                                                                
                     <!-- Footer right -->
-                    <div class="footer__right"></div>
+                    <div class="footer__right">
+                        <div class="footer__row">
+                            <!-- Column 1 -->
+                            <section class="footer__column">
+                                <h3 class="footer__heading">Explore</h3>
+                                <ul class="footer__list">
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            About Us
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Services
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Our Team
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Adopt Pet
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+
+                            <!-- Column 2 -->
+                            <section class="footer__column">
+                                <h3 class="footer__heading">Useful links</h3>
+                                <ul class="footer__list">
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            FAQs
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Shop
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Privacy Policy
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Terms of Use
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Site Map
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+                            
+                            <!-- Column 3 -->
+                            <section class="footer__column">
+                                <h3 class="footer__heading">Contact Info</h3>
+                                <ul class="footer__list">
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            abc@gmail.com
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            0 (800)-000-00-00
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            New York, NY, Rocawy 7
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+
+                            <!-- Column 4 -->
+                            <section class="footer__column">
+                                <h3 class="footer__heading">Opening Time</h3>
+                                <ul class="footer__list">
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Mon – Fri : 08.00 am – 20.00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Saturday : 09.00 am – 20.00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="footer__link">
+                                            Sunday: We are Closed
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+
+                        <p class="footer__copyright">Copyright & Design By Uihut</p>
+                    </div>
                 </div>
             </div>
         </footer>
