--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="header__inner">
                     <!-- Logo -->
-                    <a href="#!">
+                    <a href="#">
                         <div class="logo">
                             <img
                                 src="./assets/img/logo.svg"
@@ -101,24 +101,24 @@
                         <ul class="navbar__list">
                             <li class="navbar__item">
                                 <a
-                                    href="#!"
+                                    href="#"
                                     class="navbar__link navbar__link--active"
                                     >Home</a
                                 >
                             </li>
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link">About</a>
+                                <a href="#about" class="navbar__link">About</a>
                             </li>
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link"
+                                <a href="#service" class="navbar__link"
                                     >Services & Rates</a
                                 >
                             </li>
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link">Reviews</a>
+                                <a href="#review" class="navbar__link">Reviews</a>
                             </li>
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link"
+                                <a href="#contact" class="navbar__link"
                                     >Contacts us</a
                                 >
                             </li>
@@ -237,7 +237,7 @@
 
         <main>
             <!-- About -->
-            <section class="about">
+            <section id="about" class="about">
                 <div class="container">
                     <div class="about__inner">
                         <!-- About content -->
@@ -418,7 +418,7 @@
             </section>
 
             <!-- Service -->
-            <section class="service">
+            <section id="service" class="service">
                 <div class="container">
                     <div class="service__top">
                         <p class="service__desc">What we do for you?</p>
@@ -741,7 +741,7 @@
             </section>
 
             <!-- Review -->
-            <section class="review">
+            <section id="review" class="review">
                 <div class="container">
                     <div class="review__inner">
                         <!-- Review previous -->
@@ -1018,7 +1018,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer id="contact" class="footer">
             <div class="container">
                 <div class="footer__inner">
                     <!-- Footer left -->
